[metadata]
name = jpl.edrn.ldap.sync
author = Sean Kelly
author_email = kelly@seankelly.biz
description = LDAP "All EDRN" Sync for the Early Detection Research Network Directory
long_description = file: README.md
long_description_content_type = text/markdown
license = apache-2.0
keywords = ldap directory cancer
url = https://github.com/EDRN/jpl.edrn.ldap.sync
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    = src
install_requires =
    python-ldap == 3.3.1
    click == 8.0.1
namespace_packages =
    jpl
    jpl.edrn
    jpl.edrn.ldap


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    all-edrn-sync = jpl.edrn.ldap.sync.main:main
